<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_items_relative"
    android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
    android:background="#fff"
    android:paddingBottom="30dp"
    android:paddingTop="1dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_photo"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circular_two_colors_three"
                android:scaleType="center"
                android:src="@drawable/gallery"
             />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/gallery"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/two"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             android:layout_marginStart="50dp"
             android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circular_three_two_color"
                android:scaleType="center"
                 android:src="@drawable/camera"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/camera"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/three"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             android:layout_marginStart="50dp"
             android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circular_two_colors_one"
                android:scaleType="center"
                android:src="@drawable/ic_delete_black_24dp"
            />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/remove_photo"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
