<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/address_sheet"
    android:orientation="vertical"
    app:behavior_peekHeight="160dp"
    android:background="#fff"
    app:cardElevation="10dp"

    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:id="@+id/username"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:id="@+id/arrowAdressbar"
                android:visibility="gone"
                android:layout_marginEnd="15dp"
                 android:src="@drawable/more_arrow"
                android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/where_are_you_going"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="15dp"
            android:layout_margin="10dp"
            android:layout_height="60dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addressText"
                    android:background="#fff"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_destination"
                    android:inputType="textPersonName"
                    android:singleLine="true"

                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/addressEdit"
                    android:background="#fff"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_destination"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/addressBarFrag"
                android:layout_height="wrap_content">

            </FrameLayout>
            <include layout="@layout/address_bar_fragment"
                android:id="@+id/addressbarExtra"
                />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</android.support.v7.widget.CardView>